--- a/main.tex
+++ b/main.tex
@@ -160,6 +160,83 @@ Beschreibe das Ereignis, dass mind. ein Würfel eine 1 zegt \(A = \{(1,1), \cdot
 \]
 \[ = (\Sigma_{w_1 \in \Omega_1} p_1(w_1))(\Sigma_{w_2 \in \Omega_2} p_2(w_2)) \cdots (\Sigma_{w_n \in \Omega_n} p_n(w_n))
 \]
+
+\subsection*{Unabhängigkeit}
+Diskreter W-Raum \((\Omega, P)\) Ereignis \(A \subseteq \Omega\) Formalisierung Für die Idee, dass zwei Ereignisse A und B ich nicht beeinflussen. 
+\paragraph*{Def:} Zwei Ereignisse \(A,B \subseteq \Omega\) heißen \textbf{Unabhängig}, falls \(P(A \cap B) = P(A) P(B)\)
+\paragraph*{Bsp:} Wurf eines Würfels \(\leadsto \Omega = \{1,2,3,4,5,6\}, A =\{2,4,6\}, B = \{1,2\}, C=\{2,3,5\}\) \(P(A \cap B) = P(\{2\}) = \frac{1}{6}\) \(P(A) \cdot P(B) = \frac{1}{2} \cdot \frac{1}{3} = \frac{1}{6}\) => A und B Unabhängig \(P(A \cap B ) = \frac{1}{6}\) \(P(A) \cdot P(C) = \frac{1}{2} \cdot \frac{1}{2} = \frac{1}{4}\) => A und C sind nicht Unabhängig.
+
+\paragraph*{Def:} Eine Menge \(\{A_1, \cdots, A_2\}\) von Ereignissen ist \textbf{Unabhängig} falls \(P(\bigcap^n_{i=1} A_i) = \Pi^n_{i = 1}P(\bigwedge,)\)
+\paragraph*{Im Bsp:} Angenommen wir wissen, dass A eingetreten ist. Is es dann meht oder weniger wahrscheinlich, dass auch C eingetreten ist?
+\(P(C \vert A) = \frac{1}{3}, P(C) = \frac{1}{2}\)
+\paragraph*{Def:} Die \textbf{bedingte Wahrscheinlichkeit} \(P(B \vert A)\) vin B unter der Annahme, dass A eingetreten ist, ist \(P(B \vert A) = \frac{P(B \cap A)}{P(A)}\), \(P(A) > 0\)
+
+\paragraph*{Angenommen} \(A \subseteq B\) \(P(B \vert A) = \frac{P(B \cap A)}{P(A)} = \frac{P(A)}{P(A)} = 1\)
+
+\paragraph*{Beobachtung: } Seien A und B unabhängig. Dann \(P(B \vert A) = \frac{P(A \cap B)}{P(A)} = \frac{P(A) \cdot P(B)}{P(A)} = P(B)\) (A liefert keine zusätzliche Information ob B eingetreten ist!)
+
+\paragraph*{Bsp:} Würfer mit zwei Würfeln B: Ereignis, dass die Summe der Augenzahl = p ist \\ A: Ereignis, dass der 1. Wurf = 5 ist.\\ \(B = \{(4,5), (5,4), (3,6), (6,3)\}\)\\ \(A = \{(5,1), (5,2), ...\}\)\\ \(P(B \vert A) = \frac{P(A \cap B)}{P(A)} = \frac{\frac{1}{36}}{\frac{1}{6}} = \frac{1}{6}\)\\ \(P(B) = \frac{4}{??} = \frac{1}{?}\)
+
+\subsection*{Gesetz der totalen Wahrscheinlichkeit} 
+
+\(\Cup\) soll später getauscht werden mit punkt drin symbol!!!!\\
+
+\(\Omega = \Cup^n_{i = 1} E_i, E_i \cap E_j = \varnothing i \not = j, A \subseteq \Omega\) 
+\paragraph*{Dann:} \(P(A) = Sigma^n_{i = 1} P(A \vert E_i) \cdot P(E_i)\)
+
+\paragraph*{Beweis:} \(A = \Cup^n_{i = 1} (A \cap E_i), P(A\cap E_i) = P(A \vert E_i)\)
+
+\[hier text einfügen noch was fehlt...\]
+
+Also \(P(A) =_{3. Axiom} \Sigma\)
+
+\subsection*{Satz von Bayes:} \(A,B \subseteq \Omega, P(A), P(B) \not = 0\) \\ Dann \(P(B \vert A) = P(A \vert B) \cdot \frac{P(B)}{P(A)}\) 
+\paragraph*{Beweis:} \(P(A \vert B) = \frac{P(A \cap B)}{P(B)}\), \(P(B \vert A) = \frac{P(A \cap B)}{P(A)}\) \\ =>\(P(A \vert B) \cdot P(B) = P(B \vert A) = P(A)\) \(\Box\)
+
+\section*{Diskrete Zufallszahlen}
+Oft möchte man Ereignissen einen nummerischen Wert zuordnen (Summe der Augenzahlen, Gewinn). 
+
+\paragraph*{Def:} Eine \textbf{diskrete Zufallszahlen} X ist eine Funktion \(X: \Omega \to \mathbb{R}\) auf einen diskreten W-Raum \((\Omega, P)\)
+
+\paragraph*{Bem:} X ist keine "Variable" im üblichen Sinne, sondern eine Funktion. \\
+
+Wir können einen W-Raum auf den Werten (Bilderraum) von X definieren. 
+
+\paragraph*{Satz} Sei X diskreter zufallsvariable auf \((\Omega, P)\). \\ \(\Omega_{X} = im(X) = \{x \in \mathbb{R} \vert E??=_w \in \Omega : X(w) = x\}\) \(Px^{(x)} = P(X^{-1}(x)) P= (\{w \in \Omega \vert X(w) = x \})\) deiniert eine W-funktion auf \(\Omega_X\).
+
+\[Hier wichtig checke ob X richtig groß oder klein ist!!!\]
+
+\paragraph*{Beweis:} \(0 \leq P_X(x) \leq 1 \quad \forall Ax\in \Omega_X \) bei def (hier photos checken!!?) \\ \(\Omega = \Cap_{x \in \Omega_X} X^{-1}(x)\), \(\sigma_{x \in \Omega_X} P_X(x) = \Sigma_{x \in \Omega_X}\) <- Das ist einfach komplet falsch ich muss das noch mal über arbeiten??
+
+\paragraph*{Def:} Das Wahrscheinlichkeitsmaß definiert auf \(\Omega_X = im(X)\) mittels \(P_X(x) = P(X = x)\) heißt die \textbf{Verteilung} von X.
+
+\paragraph*{Bsp:} Bei einem Wurf eines fairen Würfels werden den Agenzahlen folgende Gewinne zugewiesen. 
+
+\[hier tabelle einfügen\]
+
+definiert Zufallsvariable \(X: \{1,2,3,4,5,6\} \to \mathbb{R} \quad P(X = 1) = P(X^{-1}(1)) = P(\{w \in \Omega \vert X(w) = 1\}) = P(\{1,2,3\}) = \frac{3}{6} = \frac{1}{2}\) \(\Omega_X = \{1,2,3\}\)
+
+\[hier nochmal tabelle :'(\]
+(Verteilung)
+
+\subsection*{Binomialverteilung:} mit Parametern \(n \in \mathbb{N}\), \(p \in [0,1]\). ist definiert ais \(\Omega_X = \{0,1, \cdots, n\}\) durch die W-funktion \(b(k, n ,p) = \binom{n}{k} p^k (1-p)^{n-k}\)
+
+\subsection*{Bernoulli-Experiment:} Versucgh mit zwei Ausgängen \(\{1, 0\}\) \(P(1) = p, P(o) = q = 1-p\).
+
+\subsection*{Bernouilli-Prozess:} Die Folge von Wiederholungen dasselben Bernoulli-Experiments. Ein Prozess mit n Versuchen kann mittels \(\Omega^n\) beschreiben werden. \((0,1,0,0,1,1, \cdots)\) \\Die Wahrscheinlichkeit für k Erfolge ist gegeben durch \(b(k,n,p)\). 
+
+\subsection*{Hypergeometrische Verteilung}
+parameter \(K,n,r,m \in \mathbb{Z}_{\geq 0}\) mit \(0 \leq k \leq n \leq m\), \(k \leq r\). Defniniert durch \(h(K, n,r,m) = \frac{\binom{r}{k} \binom{m-r}{n-k}}{ \binom{m}{n}}\)
+
+\paragraph*{Interpretation:} Urne mit r roten Kugeln, m-r blaue Ziehen n Kugeln ohne zurückzlegen (auf einmal) \\ \(\Omega\) = Jede Menge von n Kugeln \\ \(P\) = gleichverteilt \\ \(h(k; n,r,m) = P\) was kommt hier rein????
+
+\paragraph*{Def:} Der \textbf{Erwartungswert} einer diskreter Zufallsvariable X ist (Was für n komisches E ist das denn bitt??) \(E[x] = \Sigma_{x \in \Omega_X} p_X (x) X = \Sigma_{x \in \Omega_X} P(X=x)\cdot x\) und wird oft mit mü (wie mükrosekunde) bezeichnet.
+
+\paragraph*{Bsp:} Beim Würfeln einer geraden Augenzahl verliert man ???? Beim Würfeln einer ungeraden gewinnt man die Augenzahl in ???. \\ \(\Omega_X = \{-3,1,3,5\}\) \[hier noch tabelle\] \(??? = ????\)
+
+\paragraph*{Satz:} X diskreter Zufallsvariable über \((\Omega, P)\). Dann \(??? = \Sigma_{w \in \Omega}X(w) p(w)\)
+
+\paragraph*{Beweis:} \(??? = \Sigma_{x \in \Omega_X} Xp_x(x) = \Sigma_{x \in \Omega_X} x \cdot P(X^-1)(x)) = \Sigma_{x \in im(X)} X \)
 \end{document}
 
 
