--- a/main.tex
+++ b/main.tex
@@ -78,7 +78,7 @@
 \paragraph*{Ziel:} Mathematisches Modell, welches die intuitive Idee "Wahrscheinlichkeit"(="relative Häufigkeit") beschreibt.
 \paragraph*{Anwendung:} 
 \begin{itemize}
-    \item Modellierung von Komplecxen Systemen (Aktienmarkt, Verkehr, Anfragen bei einem Server)
+    \item Modellierung von Komplexen Systemen (Aktienmarkt, Verkehr, Anfragen bei einem Server)
     \item Randomisierte Algorithmen (Las-Vegas Algo., Modelierungs Algo. Primzahlentest)
     \item Performance-Annalyse von Algorithmen (Durchschnittliche Laufzeit bei zufälligen Input)
 \end{itemize}
@@ -99,16 +99,16 @@ Ausgangsraum: \(6 \cdot 6 = 36\) Möglichekeiten.\\
 \end{itemize}
 
 \subsection*{Wahrscheinlichkeiten}
-\paragraph*{Zuweisungen:} Zu jedem \(w \in \Omega\) \(p(w) \in [0, 1]\) zuweisen sodass \(\Sigma_{w \in \Omega} p(w) = 1\)
-Idee: Ein Elementarereignis muss auftreten.
-Hier: "faire Würfel" => gibt keinen Grund \(p(1,3) > p(5,6)\) 
+\paragraph*{Zuweisungen:} Zu jedem \(w \in \Omega \quad\) \(p(w) \in [0, 1]\) zuweisen sodass \(\Sigma_{w \in \Omega} p(w) = 1\)
+\paragraph*{Idee:} Ein Elementarereignis muss auftreten.
+\paragraph*{Hier:} "faire Würfel" => gibt keinen Grund \(p(1,3) > p(5,6)\) 
 Also \(p(1,1) = \cdots = p(6,6) = \frac{1}{36}\)
 Möchten umfassende Ereignisse beschreiben z.B. die Summe der Augenzahl ist 3.
 \(A =\{(1,2), (2,1)\} \subseteq \Omega\)
-intuitiv: \(P(A) = p(1,2) + p(2,1) = 2 \cdot \frac{1}{36} = \frac{1}{18}\)
+\paragraph*{intuitiv:} \(P(A) = p(1,2) + p(2,1) = 2 \cdot \frac{1}{36} = \frac{1}{18}\)
 
 \subsection*{Formale Einführung (Kolmogorov, 1933)}
-\paragraph*{Definition:} Ein \textbf{diskreter Wahrscheinlichkeitsraum} ist ein Paar \((\Omega, P)\) wobei: \(\Omega\) eine endliche oder eine abzählbar unendliche Menge ist (\textbf{Elementarereignise}) und \(P \cdot \mathcal{P} \rightarrow)\mathbb{R}\) ein \textbf{Wahrscheinlichkeitsmaß}, d.h (Wahrscheinlichkeitsverteilung)
+\paragraph*{Definition:} Ein \textbf{diskreter Wahrscheinlichkeitsraum} ist ein Paar \((\Omega, P)\) wobei: \(\Omega\) eine endliche oder eine abzählbar unendliche Menge ist (\textbf{Elementarereignise}) und \(P \cdot \mathcal{P} \rightarrow\mathbb{R}\) ein \textbf{Wahrscheinlichkeitsmaß}, d.h (Wahrscheinlichkeitsverteilung)
 \begin{itemize}
     \item [(i)] \(P(A) \geq 0 \forall A \in \mathcal{P}(A)\) Nichtnegativitätsgesetz
     \item [(ii)] \(P(\Omega) = 1\) (Normierung)
